# garage_api

./: README.md  create_systemd_service.py  example.env  pyproject.toml  requirements.txt  run.py  run.sh  run_dev.sh
app/: authentication.py  camera.py  doors.py  lights.py  main.py  relay.py
install/: garage_api_service  install.sh  run.py  run_garage_api.sh
